Major Changes
Public Key Retrieval, Registration and Sending Encrypted Messages all
now work!